# NIQKI

./: .gitignore  Makefile  Makefile.in  README.md  bench.txt  configure  configure.ac  index.h  main.cpp
config/: config.h  config.h.in
resources/: file_of_file.txt  littleFof.txt  nihm.ascii  niqki.ascii  parse.py
resources/genomes/: littleFof.txt
ressources/: nihm.ascii
src/: Makefile  Makefile.am  Makefile.in  common.h  genome.cpp  genome.h  nihm.cpp  nihm_index.cpp  nihm_index.h  niqki.cpp  niqki_index.cpp  niqki_index.h  optionparser.h  strict_fstream.hpp  zstr.hpp
src/.deps/: nihm_index.Tpo
